quick fix to advantage section overflow

--- a/style.css
+++ b/style.css
@@ -669,7 +669,7 @@ body {
 /* Advantage Section */
 
 .advantage {
-  height: 120vh;
+  height: 140vh;
   width: 100%;
   display: flex;
   justify-content: center;
